# devops-containers-exercise

./: Justfile  LICENSE  compose.yml  docker-compose.yaml  docker-status.txt  findings.txt  llm.txt  login.txt
nginx/: Dockerfile  Justfile  htpasswd  index.html  nginx.conf  shutdown.php
service-go/: Dockerfile  Justfile  go.mod  go.sum  main.go
service-go/internal/getsysinfo/: disk.go  get_ip.go  go.mod  go.sum  ps.go  uptime.go
service-rs/: .gitignore  Cargo.toml  Containerfile  Dockerfile  Justfile
service-rs/examples/: disk.rs  get_ip.rs  ps.rs  uptime.rs
service-rs/src/: api.rs  fetch_url.rs  main.rs  sysinfo_response.rs
service-rs/src/sysinfo_response/: disk.rs  net.rs  ps_ax.rs  uptime.rs
